package engine;

public enum GameState {
    PLANNING,
    ACTION
}
