package graphics.utils;

public class Positions {

    public static final int[][][] positions = new int[][][]{
            {
                    {212, 352},
                    {404, 352},
                    {596, 352},
                    {717, 352}
            },
            {
                    {212, 413},
                    {404, 413},
                    {596, 413},
                    {717, 413}
            }
    };
}
