@startuml

title __COLTEXPRESS's Class Diagram__\n

  namespace main {
    class main.Game {
    }
  }
  

  namespace main {
    namespace controller {
      class main.controller.GameController {
      }
    }
  }
  

  namespace main {
    namespace engine {
      class main.engine.GameEngine {
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Bandit {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Bounty {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Character {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Entity {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Marshall {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Train {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace utils {
        enum Action {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace utils {
        enum Direction {
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace utils {
        enum GameState {
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      class main.graphics.GameDisplay {
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace graphicElements {
        class main.graphics.graphicElements.Board {
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace graphicElements {
        class main.graphics.graphicElements.BoardG {
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace graphicElements {
        class main.graphics.graphicElements.Buttons {
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace utils {
        class main.graphics.utils.Positions {
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace utils {
        class main.graphics.utils.TextDisplay {
        }
      }
    }
  }
  

  namespace test {
    class test.BanditTest {
    }
  }
  

  main.engine.gameElements.Bandit -up-|> main.engine.gameElements.Character
  main.engine.gameElements.Bounty -up-|> main.engine.gameElements.Entity
  main.engine.gameElements.Character -up-|> main.engine.gameElements.Entity
  main.engine.gameElements.Marshall -up-|> main.engine.gameElements.Character
  main.graphics.GameDisplay -up-|> javax.swing.JFrame
  main.graphics.graphicElements.Board -up-|> javax.swing.JPanel
  main.graphics.graphicElements.BoardG -up-|> javax.swing.JPanel
  main.graphics.graphicElements.Buttons -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
